# project_tool-maker

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
examples/: basic_usage.py  flask_integration.py
src/tool_maker/: __init__.py  client.py  config.py  dotenv.py  tool_fixer.py  tool_maker.py
src/tool_maker/analyzer/: __init__.py  project_scanner.py
src/tool_maker/cli/: __init__.py  main.py
src/tool_maker/db/: __init__.py  backends.py  config.py  connection.py  migrator.py  models.py  pipeline.py
src/tool_maker/db/migrations/: 001_initial.postgres.sql  001_initial.sqlite.sql
src/tool_maker/flask/: __init__.py  extension.py
src/tool_maker/llm/: __init__.py  provider.py
src/tool_maker/planner/: __init__.py  executor.py  models.py  planner.py  reviewer.py  validator.py  writer.py
src/tool_maker/tool/: __init__.py  deps.py  executor.py  generator.py  sandbox.py
src/tool_maker/ui/: __init__.py  app.py  log_handler.py  routes.py
src/tool_maker/ui/static/: style.css
src/tool_maker/ui/templates/: analyze.html  base.html  config.html  docs.html  execute.html  generate.html  index.html  pipeline.html  provider.html
tests/: test_config_and_fixer.py  test_executor.py  test_generator.py  test_planner.py  test_project_scanner.py  test_provider.py  test_sandbox.py  test_tool_maker.py
