[project]
name = "tool-maker"
version = "0.1.0"
description = "An intelligent tool-making package that leverages LLMs to analyze projects and generate tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
flask = ["flask>=2.3.0"]
postgres = ["psycopg2-binary>=2.9.0"]
all = ["tool-maker[flask,postgres]"]

[project.scripts]
tool-maker = "tool_maker.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
