[project]
name = "tool-maker"
version = "0.1.0"
description = "An intelligent tool-making package that leverages LLMs to analyze projects and generate tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "west", email = "westdynamics.tech@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
flask = ["flask>=2.3.0"]
postgres = ["psycopg2-binary>=2.9.0"]
all = ["tool-maker[flask,postgres]"]

[project.scripts]
tool-maker = "tool_maker.cli.main:main"

[project.urls]
Homepage = "https://github.com/codewithwest/tool-maker"
Repository = "https://github.com/west/tool-maker"
Documentation = "https://github.com/west/tool-maker#readme"
Issues = "https://github.com/west/tool-maker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
